# haskell-m269

./: CHANGELOG.md  HaskellCourse202503.org  HaskellCourse202503BT.org  HaskellCourse202504.org  README.md  haskell-m269.cabal  hie.yaml
src/: HaskellCourse202503.hs  HaskellCourse202503BT.hs  HaskellCourse202503BT.lhs  HaskellCourse202504.hs  MyLib.hs
